[project]
name = "comfyui-p2e-node"
version = "0.1.0"
description = "Perspective to Equirectangular projection nodes for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.9.1",
]

[tool.comfy]
PublisherId = "amanbagrecha"
DisplayName = "Perspective to Equirectangular"
